parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    CATCH
    COLON
    DECR
    DEFINE
    DIVEQ
    EEQ
    ELSEIF
    EXTENDS
    FALSE
    FINALLY
    FOR
    IMPLEMENTS
    INTERFACE
    MINUSEQ
    MODEQ
    NEW
    NNEQ
    NOT
    NULL
    OR
    PLUSEQ
    PRIVATE
    PROTECTED
    PUBLIC
    THROW
    TIMESEQ
    TRUE
    TRY

Grammar

Rule 0     S' -> program
Rule 1     expression_list -> expression
Rule 2     expression_list -> expression_list COMMA expression
Rule 3     expression -> LBRACKET expression_list RBRACKET
Rule 4     condition -> expression ANDAND expression
Rule 5     condition -> expression OROR expression
Rule 6     condition -> expression EQ expression
Rule 7     condition -> expression NEQ expression
Rule 8     condition -> expression LT expression
Rule 9     condition -> expression GT expression
Rule 10    condition -> expression LE expression
Rule 11    condition -> expression GE expression
Rule 12    statement -> IF LPAREN condition RPAREN block ELSE block
Rule 13    statement -> IF LPAREN condition RPAREN block
Rule 14    statement -> FUNCTION ID LPAREN parameter_list RPAREN block
Rule 15    parameter_list -> VARIABLE
Rule 16    parameter_list -> parameter_list COMMA VARIABLE
Rule 17    parameter_list -> empty
Rule 18    expression -> ID LPAREN array_pairs RPAREN
Rule 19    array_pairs -> STRING DOUBLEARROW expression
Rule 20    array_pairs -> array_pairs COMMA STRING DOUBLEARROW expression
Rule 21    statement -> FOREACH LPAREN VARIABLE AS VARIABLE RPAREN block
Rule 22    class_static_method -> STATIC FUNCTION ID LPAREN RPAREN block
Rule 23    class_statement -> class_static_method
Rule 24    class_statement -> statement
Rule 25    class_body -> class_statement
Rule 26    class_body -> class_body class_statement
Rule 27    statement -> CLASS ID LBRACE class_body RBRACE
Rule 28    statement -> ECHO expression SEMICOLON
Rule 29    statement -> expression SEMICOLON
Rule 30    expression -> ID LPAREN STRING RPAREN
Rule 31    expression -> expression PLUS expression
Rule 32    expression -> expression MINUS expression
Rule 33    expression -> expression TIMES expression
Rule 34    expression -> expression DIVIDE expression
Rule 35    expression -> expression MOD expression
Rule 36    expression -> expression CONCAT expression
Rule 37    expression -> VARIABLE
Rule 38    expression -> NUMBER
Rule 39    expression -> FLOAT
Rule 40    expression -> STRING
Rule 41    expression -> ID LPAREN expression_list RPAREN
Rule 42    expression -> VARIABLE LBRACKET expression RBRACKET
Rule 43    assignment -> VARIABLE ASSIGN expression
Rule 44    assignment -> VARIABLE LBRACKET RBRACKET ASSIGN expression
Rule 45    statement -> assignment SEMICOLON
Rule 46    statement -> RETURN expression SEMICOLON
Rule 47    expression -> ID LPAREN RPAREN
Rule 48    expression -> expression INCR
Rule 49    block -> LBRACE statement_list RBRACE
Rule 50    statement_list -> statement
Rule 51    statement_list -> statement_list statement
Rule 52    empty -> <empty>
Rule 53    program -> PHP_OPEN statement_list PHP_CLOSE
Rule 54    program -> statement_list
Rule 55    expression -> LBRACKET expression_list_of_lists RBRACKET
Rule 56    expression_list_of_lists -> LBRACKET expression_list RBRACKET
Rule 57    expression_list_of_lists -> expression_list_of_lists COMMA LBRACKET expression_list RBRACKET
Rule 58    statement -> WHILE LPAREN condition RPAREN block
Rule 59    expression -> FUNCTION LPAREN parameter_list RPAREN block

Terminals, with rules where they appear

AND                  : 
ANDAND               : 4
AS                   : 21
ASSIGN               : 43 44
CATCH                : 
CLASS                : 27
COLON                : 
COMMA                : 2 16 20 57
CONCAT               : 36
DECR                 : 
DEFINE               : 
DIVEQ                : 
DIVIDE               : 34
DOUBLEARROW          : 19 20
ECHO                 : 28
EEQ                  : 
ELSE                 : 12
ELSEIF               : 
EQ                   : 6
EXTENDS              : 
FALSE                : 
FINALLY              : 
FLOAT                : 39
FOR                  : 
FOREACH              : 21
FUNCTION             : 14 22 59
GE                   : 11
GT                   : 9
ID                   : 14 18 22 27 30 41 47
IF                   : 12 13
IMPLEMENTS           : 
INCR                 : 48
INTERFACE            : 
LBRACE               : 27 49
LBRACKET             : 3 42 44 55 56 57
LE                   : 10
LPAREN               : 12 13 14 18 21 22 30 41 47 58 59
LT                   : 8
MINUS                : 32
MINUSEQ              : 
MOD                  : 35
MODEQ                : 
NEQ                  : 7
NEW                  : 
NNEQ                 : 
NOT                  : 
NULL                 : 
NUMBER               : 38
OR                   : 
OROR                 : 5
PHP_CLOSE            : 53
PHP_OPEN             : 53
PLUS                 : 31
PLUSEQ               : 
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
RBRACE               : 27 49
RBRACKET             : 3 42 44 55 56 57
RETURN               : 46
RPAREN               : 12 13 14 18 21 22 30 41 47 58 59
SEMICOLON            : 28 29 45 46
STATIC               : 22
STRING               : 19 20 30 40
THROW                : 
TIMES                : 33
TIMESEQ              : 
TRUE                 : 
TRY                  : 
VARIABLE             : 15 16 21 21 37 42 43 44
WHILE                : 58
error                : 

Nonterminals, with rules where they appear

array_pairs          : 18 20
assignment           : 45
block                : 12 12 13 14 21 22 58 59
class_body           : 26 27
class_statement      : 25 26
class_static_method  : 23
condition            : 12 13 58
empty                : 17
expression           : 1 2 4 4 5 5 6 6 7 7 8 8 9 9 10 10 11 11 19 20 28 29 31 31 32 32 33 33 34 34 35 35 36 36 42 43 44 46 48
expression_list      : 2 3 41 56 57
expression_list_of_lists : 55 57
parameter_list       : 14 16 59
program              : 0
statement            : 24 50 51
statement_list       : 49 51 53 54

Parsing method: LALR

state 0

    (0) S' -> . program
    (53) program -> . PHP_OPEN statement_list PHP_CLOSE
    (54) program -> . statement_list
    (50) statement_list -> . statement
    (51) statement_list -> . statement_list statement
    (12) statement -> . IF LPAREN condition RPAREN block ELSE block
    (13) statement -> . IF LPAREN condition RPAREN block
    (14) statement -> . FUNCTION ID LPAREN parameter_list RPAREN block
    (21) statement -> . FOREACH LPAREN VARIABLE AS VARIABLE RPAREN block
    (27) statement -> . CLASS ID LBRACE class_body RBRACE
    (28) statement -> . ECHO expression SEMICOLON
    (29) statement -> . expression SEMICOLON
    (45) statement -> . assignment SEMICOLON
    (46) statement -> . RETURN expression SEMICOLON
    (58) statement -> . WHILE LPAREN condition RPAREN block
    (3) expression -> . LBRACKET expression_list RBRACKET
    (18) expression -> . ID LPAREN array_pairs RPAREN
    (30) expression -> . ID LPAREN STRING RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression TIMES expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression MOD expression
    (36) expression -> . expression CONCAT expression
    (37) expression -> . VARIABLE
    (38) expression -> . NUMBER
    (39) expression -> . FLOAT
    (40) expression -> . STRING
    (41) expression -> . ID LPAREN expression_list RPAREN
    (42) expression -> . VARIABLE LBRACKET expression RBRACKET
    (47) expression -> . ID LPAREN RPAREN
    (48) expression -> . expression INCR
    (55) expression -> . LBRACKET expression_list_of_lists RBRACKET
    (59) expression -> . FUNCTION LPAREN parameter_list RPAREN block
    (43) assignment -> . VARIABLE ASSIGN expression
    (44) assignment -> . VARIABLE LBRACKET RBRACKET ASSIGN expression

    PHP_OPEN        shift and go to state 2
    IF              shift and go to state 5
    FUNCTION        shift and go to state 6
    FOREACH         shift and go to state 8
    CLASS           shift and go to state 10
    ECHO            shift and go to state 11
    RETURN          shift and go to state 14
    WHILE           shift and go to state 15
    LBRACKET        shift and go to state 16
    ID              shift and go to state 7
    VARIABLE        shift and go to state 9
    NUMBER          shift and go to state 18
    FLOAT           shift and go to state 19
    STRING          shift and go to state 17

    program                        shift and go to state 1
    statement_list                 shift and go to state 3
    statement                      shift and go to state 4
    expression                     shift and go to state 12
    assignment                     shift and go to state 13

state 1

    (0) S' -> program .



state 2

    (53) program -> PHP_OPEN . statement_list PHP_CLOSE
    (50) statement_list -> . statement
    (51) statement_list -> . statement_list statement
    (12) statement -> . IF LPAREN condition RPAREN block ELSE block
    (13) statement -> . IF LPAREN condition RPAREN block
    (14) statement -> . FUNCTION ID LPAREN parameter_list RPAREN block
    (21) statement -> . FOREACH LPAREN VARIABLE AS VARIABLE RPAREN block
    (27) statement -> . CLASS ID LBRACE class_body RBRACE
    (28) statement -> . ECHO expression SEMICOLON
    (29) statement -> . expression SEMICOLON
    (45) statement -> . assignment SEMICOLON
    (46) statement -> . RETURN expression SEMICOLON
    (58) statement -> . WHILE LPAREN condition RPAREN block
    (3) expression -> . LBRACKET expression_list RBRACKET
    (18) expression -> . ID LPAREN array_pairs RPAREN
    (30) expression -> . ID LPAREN STRING RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression TIMES expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression MOD expression
    (36) expression -> . expression CONCAT expression
    (37) expression -> . VARIABLE
    (38) expression -> . NUMBER
    (39) expression -> . FLOAT
    (40) expression -> . STRING
    (41) expression -> . ID LPAREN expression_list RPAREN
    (42) expression -> . VARIABLE LBRACKET expression RBRACKET
    (47) expression -> . ID LPAREN RPAREN
    (48) expression -> . expression INCR
    (55) expression -> . LBRACKET expression_list_of_lists RBRACKET
    (59) expression -> . FUNCTION LPAREN parameter_list RPAREN block
    (43) assignment -> . VARIABLE ASSIGN expression
    (44) assignment -> . VARIABLE LBRACKET RBRACKET ASSIGN expression

    IF              shift and go to state 5
    FUNCTION        shift and go to state 6
    FOREACH         shift and go to state 8
    CLASS           shift and go to state 10
    ECHO            shift and go to state 11
    RETURN          shift and go to state 14
    WHILE           shift and go to state 15
    LBRACKET        shift and go to state 16
    ID              shift and go to state 7
    VARIABLE        shift and go to state 9
    NUMBER          shift and go to state 18
    FLOAT           shift and go to state 19
    STRING          shift and go to state 17

    statement_list                 shift and go to state 20
    statement                      shift and go to state 4
    expression                     shift and go to state 12
    assignment                     shift and go to state 13

state 3

    (54) program -> statement_list .
    (51) statement_list -> statement_list . statement
    (12) statement -> . IF LPAREN condition RPAREN block ELSE block
    (13) statement -> . IF LPAREN condition RPAREN block
    (14) statement -> . FUNCTION ID LPAREN parameter_list RPAREN block
    (21) statement -> . FOREACH LPAREN VARIABLE AS VARIABLE RPAREN block
    (27) statement -> . CLASS ID LBRACE class_body RBRACE
    (28) statement -> . ECHO expression SEMICOLON
    (29) statement -> . expression SEMICOLON
    (45) statement -> . assignment SEMICOLON
    (46) statement -> . RETURN expression SEMICOLON
    (58) statement -> . WHILE LPAREN condition RPAREN block
    (3) expression -> . LBRACKET expression_list RBRACKET
    (18) expression -> . ID LPAREN array_pairs RPAREN
    (30) expression -> . ID LPAREN STRING RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression TIMES expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression MOD expression
    (36) expression -> . expression CONCAT expression
    (37) expression -> . VARIABLE
    (38) expression -> . NUMBER
    (39) expression -> . FLOAT
    (40) expression -> . STRING
    (41) expression -> . ID LPAREN expression_list RPAREN
    (42) expression -> . VARIABLE LBRACKET expression RBRACKET
    (47) expression -> . ID LPAREN RPAREN
    (48) expression -> . expression INCR
    (55) expression -> . LBRACKET expression_list_of_lists RBRACKET
    (59) expression -> . FUNCTION LPAREN parameter_list RPAREN block
    (43) assignment -> . VARIABLE ASSIGN expression
    (44) assignment -> . VARIABLE LBRACKET RBRACKET ASSIGN expression

    $end            reduce using rule 54 (program -> statement_list .)
    IF              shift and go to state 5
    FUNCTION        shift and go to state 6
    FOREACH         shift and go to state 8
    CLASS           shift and go to state 10
    ECHO            shift and go to state 11
    RETURN          shift and go to state 14
    WHILE           shift and go to state 15
    LBRACKET        shift and go to state 16
    ID              shift and go to state 7
    VARIABLE        shift and go to state 9
    NUMBER          shift and go to state 18
    FLOAT           shift and go to state 19
    STRING          shift and go to state 17

    statement                      shift and go to state 21
    expression                     shift and go to state 12
    assignment                     shift and go to state 13

state 4

    (50) statement_list -> statement .

    IF              reduce using rule 50 (statement_list -> statement .)
    FUNCTION        reduce using rule 50 (statement_list -> statement .)
    FOREACH         reduce using rule 50 (statement_list -> statement .)
    CLASS           reduce using rule 50 (statement_list -> statement .)
    ECHO            reduce using rule 50 (statement_list -> statement .)
    RETURN          reduce using rule 50 (statement_list -> statement .)
    WHILE           reduce using rule 50 (statement_list -> statement .)
    LBRACKET        reduce using rule 50 (statement_list -> statement .)
    ID              reduce using rule 50 (statement_list -> statement .)
    VARIABLE        reduce using rule 50 (statement_list -> statement .)
    NUMBER          reduce using rule 50 (statement_list -> statement .)
    FLOAT           reduce using rule 50 (statement_list -> statement .)
    STRING          reduce using rule 50 (statement_list -> statement .)
    $end            reduce using rule 50 (statement_list -> statement .)
    PHP_CLOSE       reduce using rule 50 (statement_list -> statement .)
    RBRACE          reduce using rule 50 (statement_list -> statement .)


state 5

    (12) statement -> IF . LPAREN condition RPAREN block ELSE block
    (13) statement -> IF . LPAREN condition RPAREN block

    LPAREN          shift and go to state 22


state 6

    (14) statement -> FUNCTION . ID LPAREN parameter_list RPAREN block
    (59) expression -> FUNCTION . LPAREN parameter_list RPAREN block

    ID              shift and go to state 23
    LPAREN          shift and go to state 24


state 7

    (18) expression -> ID . LPAREN array_pairs RPAREN
    (30) expression -> ID . LPAREN STRING RPAREN
    (41) expression -> ID . LPAREN expression_list RPAREN
    (47) expression -> ID . LPAREN RPAREN

    LPAREN          shift and go to state 25


state 8

    (21) statement -> FOREACH . LPAREN VARIABLE AS VARIABLE RPAREN block

    LPAREN          shift and go to state 26


state 9

    (37) expression -> VARIABLE .
    (42) expression -> VARIABLE . LBRACKET expression RBRACKET
    (43) assignment -> VARIABLE . ASSIGN expression
    (44) assignment -> VARIABLE . LBRACKET RBRACKET ASSIGN expression

    SEMICOLON       reduce using rule 37 (expression -> VARIABLE .)
    PLUS            reduce using rule 37 (expression -> VARIABLE .)
    MINUS           reduce using rule 37 (expression -> VARIABLE .)
    TIMES           reduce using rule 37 (expression -> VARIABLE .)
    DIVIDE          reduce using rule 37 (expression -> VARIABLE .)
    MOD             reduce using rule 37 (expression -> VARIABLE .)
    CONCAT          reduce using rule 37 (expression -> VARIABLE .)
    INCR            reduce using rule 37 (expression -> VARIABLE .)
    LBRACKET        shift and go to state 27
    ASSIGN          shift and go to state 28


state 10

    (27) statement -> CLASS . ID LBRACE class_body RBRACE

    ID              shift and go to state 29


state 11

    (28) statement -> ECHO . expression SEMICOLON
    (3) expression -> . LBRACKET expression_list RBRACKET
    (18) expression -> . ID LPAREN array_pairs RPAREN
    (30) expression -> . ID LPAREN STRING RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression TIMES expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression MOD expression
    (36) expression -> . expression CONCAT expression
    (37) expression -> . VARIABLE
    (38) expression -> . NUMBER
    (39) expression -> . FLOAT
    (40) expression -> . STRING
    (41) expression -> . ID LPAREN expression_list RPAREN
    (42) expression -> . VARIABLE LBRACKET expression RBRACKET
    (47) expression -> . ID LPAREN RPAREN
    (48) expression -> . expression INCR
    (55) expression -> . LBRACKET expression_list_of_lists RBRACKET
    (59) expression -> . FUNCTION LPAREN parameter_list RPAREN block

    LBRACKET        shift and go to state 16
    ID              shift and go to state 7
    VARIABLE        shift and go to state 31
    NUMBER          shift and go to state 18
    FLOAT           shift and go to state 19
    STRING          shift and go to state 17
    FUNCTION        shift and go to state 32

    expression                     shift and go to state 30

state 12

    (29) statement -> expression . SEMICOLON
    (31) expression -> expression . PLUS expression
    (32) expression -> expression . MINUS expression
    (33) expression -> expression . TIMES expression
    (34) expression -> expression . DIVIDE expression
    (35) expression -> expression . MOD expression
    (36) expression -> expression . CONCAT expression
    (48) expression -> expression . INCR

    SEMICOLON       shift and go to state 33
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    TIMES           shift and go to state 36
    DIVIDE          shift and go to state 37
    MOD             shift and go to state 38
    CONCAT          shift and go to state 39
    INCR            shift and go to state 40


state 13

    (45) statement -> assignment . SEMICOLON

    SEMICOLON       shift and go to state 41


state 14

    (46) statement -> RETURN . expression SEMICOLON
    (3) expression -> . LBRACKET expression_list RBRACKET
    (18) expression -> . ID LPAREN array_pairs RPAREN
    (30) expression -> . ID LPAREN STRING RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression TIMES expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression MOD expression
    (36) expression -> . expression CONCAT expression
    (37) expression -> . VARIABLE
    (38) expression -> . NUMBER
    (39) expression -> . FLOAT
    (40) expression -> . STRING
    (41) expression -> . ID LPAREN expression_list RPAREN
    (42) expression -> . VARIABLE LBRACKET expression RBRACKET
    (47) expression -> . ID LPAREN RPAREN
    (48) expression -> . expression INCR
    (55) expression -> . LBRACKET expression_list_of_lists RBRACKET
    (59) expression -> . FUNCTION LPAREN parameter_list RPAREN block

    LBRACKET        shift and go to state 16
    ID              shift and go to state 7
    VARIABLE        shift and go to state 31
    NUMBER          shift and go to state 18
    FLOAT           shift and go to state 19
    STRING          shift and go to state 17
    FUNCTION        shift and go to state 32

    expression                     shift and go to state 42

state 15

    (58) statement -> WHILE . LPAREN condition RPAREN block

    LPAREN          shift and go to state 43


state 16

    (3) expression -> LBRACKET . expression_list RBRACKET
    (55) expression -> LBRACKET . expression_list_of_lists RBRACKET
    (1) expression_list -> . expression
    (2) expression_list -> . expression_list COMMA expression
    (56) expression_list_of_lists -> . LBRACKET expression_list RBRACKET
    (57) expression_list_of_lists -> . expression_list_of_lists COMMA LBRACKET expression_list RBRACKET
    (3) expression -> . LBRACKET expression_list RBRACKET
    (18) expression -> . ID LPAREN array_pairs RPAREN
    (30) expression -> . ID LPAREN STRING RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression TIMES expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression MOD expression
    (36) expression -> . expression CONCAT expression
    (37) expression -> . VARIABLE
    (38) expression -> . NUMBER
    (39) expression -> . FLOAT
    (40) expression -> . STRING
    (41) expression -> . ID LPAREN expression_list RPAREN
    (42) expression -> . VARIABLE LBRACKET expression RBRACKET
    (47) expression -> . ID LPAREN RPAREN
    (48) expression -> . expression INCR
    (55) expression -> . LBRACKET expression_list_of_lists RBRACKET
    (59) expression -> . FUNCTION LPAREN parameter_list RPAREN block

    LBRACKET        shift and go to state 44
    ID              shift and go to state 7
    VARIABLE        shift and go to state 31
    NUMBER          shift and go to state 18
    FLOAT           shift and go to state 19
    STRING          shift and go to state 17
    FUNCTION        shift and go to state 32

    expression_list                shift and go to state 45
    expression_list_of_lists       shift and go to state 46
    expression                     shift and go to state 47

state 17

    (40) expression -> STRING .

    SEMICOLON       reduce using rule 40 (expression -> STRING .)
    PLUS            reduce using rule 40 (expression -> STRING .)
    MINUS           reduce using rule 40 (expression -> STRING .)
    TIMES           reduce using rule 40 (expression -> STRING .)
    DIVIDE          reduce using rule 40 (expression -> STRING .)
    MOD             reduce using rule 40 (expression -> STRING .)
    CONCAT          reduce using rule 40 (expression -> STRING .)
    INCR            reduce using rule 40 (expression -> STRING .)
    RBRACKET        reduce using rule 40 (expression -> STRING .)
    COMMA           reduce using rule 40 (expression -> STRING .)
    ANDAND          reduce using rule 40 (expression -> STRING .)
    OROR            reduce using rule 40 (expression -> STRING .)
    EQ              reduce using rule 40 (expression -> STRING .)
    NEQ             reduce using rule 40 (expression -> STRING .)
    LT              reduce using rule 40 (expression -> STRING .)
    GT              reduce using rule 40 (expression -> STRING .)
    LE              reduce using rule 40 (expression -> STRING .)
    GE              reduce using rule 40 (expression -> STRING .)
    RPAREN          reduce using rule 40 (expression -> STRING .)


state 18

    (38) expression -> NUMBER .

    SEMICOLON       reduce using rule 38 (expression -> NUMBER .)
    PLUS            reduce using rule 38 (expression -> NUMBER .)
    MINUS           reduce using rule 38 (expression -> NUMBER .)
    TIMES           reduce using rule 38 (expression -> NUMBER .)
    DIVIDE          reduce using rule 38 (expression -> NUMBER .)
    MOD             reduce using rule 38 (expression -> NUMBER .)
    CONCAT          reduce using rule 38 (expression -> NUMBER .)
    INCR            reduce using rule 38 (expression -> NUMBER .)
    RBRACKET        reduce using rule 38 (expression -> NUMBER .)
    COMMA           reduce using rule 38 (expression -> NUMBER .)
    ANDAND          reduce using rule 38 (expression -> NUMBER .)
    OROR            reduce using rule 38 (expression -> NUMBER .)
    EQ              reduce using rule 38 (expression -> NUMBER .)
    NEQ             reduce using rule 38 (expression -> NUMBER .)
    LT              reduce using rule 38 (expression -> NUMBER .)
    GT              reduce using rule 38 (expression -> NUMBER .)
    LE              reduce using rule 38 (expression -> NUMBER .)
    GE              reduce using rule 38 (expression -> NUMBER .)
    RPAREN          reduce using rule 38 (expression -> NUMBER .)


state 19

    (39) expression -> FLOAT .

    SEMICOLON       reduce using rule 39 (expression -> FLOAT .)
    PLUS            reduce using rule 39 (expression -> FLOAT .)
    MINUS           reduce using rule 39 (expression -> FLOAT .)
    TIMES           reduce using rule 39 (expression -> FLOAT .)
    DIVIDE          reduce using rule 39 (expression -> FLOAT .)
    MOD             reduce using rule 39 (expression -> FLOAT .)
    CONCAT          reduce using rule 39 (expression -> FLOAT .)
    INCR            reduce using rule 39 (expression -> FLOAT .)
    RBRACKET        reduce using rule 39 (expression -> FLOAT .)
    COMMA           reduce using rule 39 (expression -> FLOAT .)
    ANDAND          reduce using rule 39 (expression -> FLOAT .)
    OROR            reduce using rule 39 (expression -> FLOAT .)
    EQ              reduce using rule 39 (expression -> FLOAT .)
    NEQ             reduce using rule 39 (expression -> FLOAT .)
    LT              reduce using rule 39 (expression -> FLOAT .)
    GT              reduce using rule 39 (expression -> FLOAT .)
    LE              reduce using rule 39 (expression -> FLOAT .)
    GE              reduce using rule 39 (expression -> FLOAT .)
    RPAREN          reduce using rule 39 (expression -> FLOAT .)


state 20

    (53) program -> PHP_OPEN statement_list . PHP_CLOSE
    (51) statement_list -> statement_list . statement
    (12) statement -> . IF LPAREN condition RPAREN block ELSE block
    (13) statement -> . IF LPAREN condition RPAREN block
    (14) statement -> . FUNCTION ID LPAREN parameter_list RPAREN block
    (21) statement -> . FOREACH LPAREN VARIABLE AS VARIABLE RPAREN block
    (27) statement -> . CLASS ID LBRACE class_body RBRACE
    (28) statement -> . ECHO expression SEMICOLON
    (29) statement -> . expression SEMICOLON
    (45) statement -> . assignment SEMICOLON
    (46) statement -> . RETURN expression SEMICOLON
    (58) statement -> . WHILE LPAREN condition RPAREN block
    (3) expression -> . LBRACKET expression_list RBRACKET
    (18) expression -> . ID LPAREN array_pairs RPAREN
    (30) expression -> . ID LPAREN STRING RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression TIMES expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression MOD expression
    (36) expression -> . expression CONCAT expression
    (37) expression -> . VARIABLE
    (38) expression -> . NUMBER
    (39) expression -> . FLOAT
    (40) expression -> . STRING
    (41) expression -> . ID LPAREN expression_list RPAREN
    (42) expression -> . VARIABLE LBRACKET expression RBRACKET
    (47) expression -> . ID LPAREN RPAREN
    (48) expression -> . expression INCR
    (55) expression -> . LBRACKET expression_list_of_lists RBRACKET
    (59) expression -> . FUNCTION LPAREN parameter_list RPAREN block
    (43) assignment -> . VARIABLE ASSIGN expression
    (44) assignment -> . VARIABLE LBRACKET RBRACKET ASSIGN expression

    PHP_CLOSE       shift and go to state 48
    IF              shift and go to state 5
    FUNCTION        shift and go to state 6
    FOREACH         shift and go to state 8
    CLASS           shift and go to state 10
    ECHO            shift and go to state 11
    RETURN          shift and go to state 14
    WHILE           shift and go to state 15
    LBRACKET        shift and go to state 16
    ID              shift and go to state 7
    VARIABLE        shift and go to state 9
    NUMBER          shift and go to state 18
    FLOAT           shift and go to state 19
    STRING          shift and go to state 17

    statement                      shift and go to state 21
    expression                     shift and go to state 12
    assignment                     shift and go to state 13

state 21

    (51) statement_list -> statement_list statement .

    IF              reduce using rule 51 (statement_list -> statement_list statement .)
    FUNCTION        reduce using rule 51 (statement_list -> statement_list statement .)
    FOREACH         reduce using rule 51 (statement_list -> statement_list statement .)
    CLASS           reduce using rule 51 (statement_list -> statement_list statement .)
    ECHO            reduce using rule 51 (statement_list -> statement_list statement .)
    RETURN          reduce using rule 51 (statement_list -> statement_list statement .)
    WHILE           reduce using rule 51 (statement_list -> statement_list statement .)
    LBRACKET        reduce using rule 51 (statement_list -> statement_list statement .)
    ID              reduce using rule 51 (statement_list -> statement_list statement .)
    VARIABLE        reduce using rule 51 (statement_list -> statement_list statement .)
    NUMBER          reduce using rule 51 (statement_list -> statement_list statement .)
    FLOAT           reduce using rule 51 (statement_list -> statement_list statement .)
    STRING          reduce using rule 51 (statement_list -> statement_list statement .)
    $end            reduce using rule 51 (statement_list -> statement_list statement .)
    PHP_CLOSE       reduce using rule 51 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 51 (statement_list -> statement_list statement .)


state 22

    (12) statement -> IF LPAREN . condition RPAREN block ELSE block
    (13) statement -> IF LPAREN . condition RPAREN block
    (4) condition -> . expression ANDAND expression
    (5) condition -> . expression OROR expression
    (6) condition -> . expression EQ expression
    (7) condition -> . expression NEQ expression
    (8) condition -> . expression LT expression
    (9) condition -> . expression GT expression
    (10) condition -> . expression LE expression
    (11) condition -> . expression GE expression
    (3) expression -> . LBRACKET expression_list RBRACKET
    (18) expression -> . ID LPAREN array_pairs RPAREN
    (30) expression -> . ID LPAREN STRING RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression TIMES expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression MOD expression
    (36) expression -> . expression CONCAT expression
    (37) expression -> . VARIABLE
    (38) expression -> . NUMBER
    (39) expression -> . FLOAT
    (40) expression -> . STRING
    (41) expression -> . ID LPAREN expression_list RPAREN
    (42) expression -> . VARIABLE LBRACKET expression RBRACKET
    (47) expression -> . ID LPAREN RPAREN
    (48) expression -> . expression INCR
    (55) expression -> . LBRACKET expression_list_of_lists RBRACKET
    (59) expression -> . FUNCTION LPAREN parameter_list RPAREN block

    LBRACKET        shift and go to state 16
    ID              shift and go to state 7
    VARIABLE        shift and go to state 31
    NUMBER          shift and go to state 18
    FLOAT           shift and go to state 19
    STRING          shift and go to state 17
    FUNCTION        shift and go to state 32

    condition                      shift and go to state 49
    expression                     shift and go to state 50

state 23

    (14) statement -> FUNCTION ID . LPAREN parameter_list RPAREN block

    LPAREN          shift and go to state 51


state 24

    (59) expression -> FUNCTION LPAREN . parameter_list RPAREN block
    (15) parameter_list -> . VARIABLE
    (16) parameter_list -> . parameter_list COMMA VARIABLE
    (17) parameter_list -> . empty
    (52) empty -> .

    VARIABLE        shift and go to state 53
    RPAREN          reduce using rule 52 (empty -> .)
    COMMA           reduce using rule 52 (empty -> .)

    parameter_list                 shift and go to state 52
    empty                          shift and go to state 54

state 25

    (18) expression -> ID LPAREN . array_pairs RPAREN
    (30) expression -> ID LPAREN . STRING RPAREN
    (41) expression -> ID LPAREN . expression_list RPAREN
    (47) expression -> ID LPAREN . RPAREN
    (19) array_pairs -> . STRING DOUBLEARROW expression
    (20) array_pairs -> . array_pairs COMMA STRING DOUBLEARROW expression
    (1) expression_list -> . expression
    (2) expression_list -> . expression_list COMMA expression
    (3) expression -> . LBRACKET expression_list RBRACKET
    (18) expression -> . ID LPAREN array_pairs RPAREN
    (30) expression -> . ID LPAREN STRING RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression TIMES expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression MOD expression
    (36) expression -> . expression CONCAT expression
    (37) expression -> . VARIABLE
    (38) expression -> . NUMBER
    (39) expression -> . FLOAT
    (40) expression -> . STRING
    (41) expression -> . ID LPAREN expression_list RPAREN
    (42) expression -> . VARIABLE LBRACKET expression RBRACKET
    (47) expression -> . ID LPAREN RPAREN
    (48) expression -> . expression INCR
    (55) expression -> . LBRACKET expression_list_of_lists RBRACKET
    (59) expression -> . FUNCTION LPAREN parameter_list RPAREN block

    STRING          shift and go to state 57
    RPAREN          shift and go to state 56
    LBRACKET        shift and go to state 16
    ID              shift and go to state 7
    VARIABLE        shift and go to state 31
    NUMBER          shift and go to state 18
    FLOAT           shift and go to state 19
    FUNCTION        shift and go to state 32

    array_pairs                    shift and go to state 55
    expression_list                shift and go to state 58
    expression                     shift and go to state 47

state 26

    (21) statement -> FOREACH LPAREN . VARIABLE AS VARIABLE RPAREN block

    VARIABLE        shift and go to state 59


state 27
